[package]
name = "marble"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.*"
heapless = "0.8.*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
clap = { version = "4.5.*", features = ["derive", "env"] }
dirs = "6.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
once_cell = "1.21.1"
bincode = "2.0.1"
tempfile = "3.19.1"